Add a simple description of the project.

--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Coming soon...
+This is a component for the CMS Joomla to use RPC with JSON. Now it is in developer state and not stable to install. If the first stable version is tested it will be printed here. The goal of this project is a extension to simple add any other components to get json responses for external devices like iPhone/iPad and so on.
