--- a/README
+++ b/README
@@ -8,21 +8,6 @@ HowToUse:
 It includes a default service which is inlcuded. The name of the service is globally defined with "rpc". If you implement a custom
 service you should implement a class with some public methods. 
 
-Sample Service:
-class myClass {
-	public function ping($msg) {
-		return "pong:" . $msg;
-	}
-	
-	public function test2() {
-		return "test2: OK";
-	}
-	
-	private function test() {
-		return "test: ok!";
-	}
-}
-
 Samples Request/Responses:
 Request -> {"jsonrpc": "2.0", "method": "rpc.listm", "id": 1}
 Response <- {"jsonrpc":"2.0","result":{"myClass":["ping","test2"]},"id":1}
@@ -30,7 +15,17 @@ Response <- {"jsonrpc":"2.0","result":{"myClass":["ping","test2"]},"id":1}
 Request -> {"jsonrpc": "2.0", "method": "myClass.ping", "params": ["hello world"], "id": 1}
 Response <- {"jsonrpc":"2.0","result":["pong:hello world"],"id":1}
 
-FIXED:
+Request -> 	{"jsonrpc":"2.0","method":"user.get_stories",
+			"params":
+				[
+					0, 1, "", "id", "ASC",
+					"demo","demo"
+				],
+			"id":1
+		}
+Response <- All available contents.
+
+FIXED: [14-02-2012]
 - The key "error" should not be at all responses. The key "error" is only includes if it is really an error.
 
 TODO's:
